--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ http://www.tooplate.com/view/2098-health
                               <img src="img/12.jpg" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>500ml单瓶装</h3>
+                                        <h3>250ml单瓶装</h3>
                                         <div class="team-contact-info">
                                              <p><i class="fa fa-phone"></i> (86)137-2285-5477</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">service@longdefood.com</a></p>
@@ -225,7 +225,7 @@ http://www.tooplate.com/view/2098-health
                               <img src="img/21.jpg" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>500ml单瓶装</h3>
+                                        <h3>包装一</h3>
                                         <div class="team-contact-info">
                                              <p><i class="fa fa-phone"></i> (86)137-2285-5477</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
@@ -240,7 +240,7 @@ http://www.tooplate.com/view/2098-health
                               <img src="img/22.jpg" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>500ml*2瓶装</h3>
+                                        <h3>包装二</h3>
                                         <div class="team-contact-info">
                                              <p><i class="fa fa-phone"></i> (86)137-2285-5477</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">service@longdefood.com</a></p>
@@ -255,7 +255,7 @@ http://www.tooplate.com/view/2098-health
                               <img src="img/23.jpg" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>500ml*2瓶装</h3>
+                                        <h3>包装三</h3>
                                         <div class="team-contact-info">
                                              <p><i class="fa fa-phone"></i> (86)137-2285-5477</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">service@longdefood.com</a></p>
